Entrega de proyecto

--- a/src/com/neftxx/view/main.fxml
+++ b/src/com/neftxx/view/main.fxml
@@ -144,7 +144,7 @@
                     </AnchorPane>
                 </SplitPane>
             </AnchorPane>
-            <ScrollPane>
+            <ScrollPane hbarPolicy="ALWAYS" vbarPolicy="ALWAYS">
                 <VBox fx:id="paneCharts">
                 </VBox>
             </ScrollPane>
